def/force-app/main/default/objects/Case/fields/Casedevice__c.field-meta.xml
<CustomField>
    <fullName>Casedevice__c</fullName>
    <inlineHelpText>Enter either laptop or mobile</inlineHelpText>
    <label>Casedevice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>