def/force-app/main/default/objects/Case/fields/Cities__c.field-meta.xml
<CustomField>
    <fullName>Cities__c</fullName>
    <label>Capital cities</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sate__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>