def/force-app/main/default/objects/Case/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Field2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>