def/force-app/main/default/objects/Case/fields/Sate__c.field-meta.xml
<CustomField>
    <fullName>Sate__c</fullName>
    <label>Sate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mah</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>