def/force-app/main/default/objects/Case/recordTypes/caserec1.recordType-meta.xml
<RecordType>
    <fullName>caserec1</fullName>
    <active>true</active>
    <businessProcess>Inquiry</businessProcess>
    <label>Inquiry</label>
</RecordType>