def/force-app/main/default/objects/Case/recordTypes/caserec2.recordType-meta.xml
<RecordType>
    <fullName>caserec2</fullName>
    <active>true</active>
    <businessProcess>Issue Resolution</businessProcess>
    <label>Issue</label>
</RecordType>