def/force-app/main/default/objects/Case/listViews/all_cases.listView-meta.xml
<ListView>
    <fullName>all_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterOrEqual</operation>
        <value>12/28/2018 2:00 AM</value>
    </filters>
    <label>all cases</label>
    <queue>Emailassignque</queue>
</ListView>