def/force-app/main/default/objects/Case/listViews/Casequeuequote_Case.listView-meta.xml
<ListView>
    <fullName>Casequeuequote_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Casequeuequote</label>
    <queue>Casequeuequote</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>