def/force-app/main/default/objects/Case/listViews/casesassigned.listView-meta.xml
<ListView>
    <fullName>casesassigned</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>casesassigned</label>
    <language>en_US</language>
    <queue>Queuefornoninstallationcases</queue>
</ListView>