def/force-app/main/default/objects/Case/listViews/DellQueu_Case.listView-meta.xml
<ListView>
    <fullName>DellQueu_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DellQueu</label>
    <queue>DellQueu</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>