def/force-app/main/default/objects/Case/listViews/Emailassignque_Case.listView-meta.xml
<ListView>
    <fullName>Emailassignque_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Emailassignque</label>
    <queue>Emailassignque</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>