def/force-app/main/default/objects/Case/listViews/Installationqueueviews.listView-meta.xml
<ListView>
    <fullName>Installationqueueviews</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Installationqueueviews</label>
    <language>en_US</language>
    <queue>Queue1forInstallationcase</queue>
</ListView>