def/force-app/main/default/objects/Case/listViews/Listofuqie.listView-meta.xml
<ListView>
    <fullName>Listofuqie</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Listofuqie</label>
    <language>en_US</language>
    <queue>DellQueu</queue>
</ListView>