def/force-app/main/default/objects/Case/listViews/queue.listView-meta.xml
<ListView>
    <fullName>queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>queue</label>
    <queue>Emailassignque</queue>
</ListView>