def/force-app/main/default/objects/Case/listViews/Queue1forInstallationcase_Case.listView-meta.xml
<ListView>
    <fullName>Queue1forInstallationcase_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue1forInstallationcase</label>
    <queue>Queue1forInstallationcase</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>