def/force-app/main/default/objects/Case/listViews/Queuefornoninstallationcases_Case.listView-meta.xml
<ListView>
    <fullName>Queuefornoninstallationcases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Queuefornoninstallationcases</label>
    <queue>Queuefornoninstallationcases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>